--- a/gameWish/Core/templates/edit_profile.html
+++ b/gameWish/Core/templates/edit_profile.html
@@ -6,7 +6,9 @@
   <h1>Actualizar informacion</h1>
   <form method="POST" action= '' enctype="multipart/form-data">
     {% csrf_token %}
+    
       {{form.as_p}}
+      {{picture_form.as_p}}
       
       <button type="submit" class="btn btn-primary">Actualizar</button>
   </form>
