Comunicacion con la api e integracion nav-bar

--- a/gameWish/Core/templates/navbar.html
+++ b/gameWish/Core/templates/navbar.html
@@ -23,12 +23,14 @@
           </li>
           
           {% endif %}
-          
+
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-primary" type="submit">Search</button>
+        {% if user.is_authenticated %}
+        <form class="d-flex" role="search" action="/games/search" method="GET">
+          <input class="form-control me-2" type="search"  name="query" placeholder="Busca un juego" aria-label="Search">
+          <button class="btn btn-outline-primary" type="submit">Buscar</button>
         </form>
+        {% endif %}
       </div>
     </div>
   </nav>
