--- a/gameWish/Games/templates/success.html
+++ b/gameWish/Games/templates/success.html
@@ -9,7 +9,9 @@
             {% for game in data %}
                 <div class="col-md-4 mb-4">
                     <div class="card">
+                        <a href="{% url 'game_detail' game.id %}">
                         <img src="https://images.igdb.com/igdb/image/upload/t_cover_big_2x/{{ game.cover.image_id }}.jpg" class="card-img-top" alt="{{ game.name }}">
+                    </a>
                         <div class="card-body">
                             <h5 class="card-title">{{ game.name }}</h5>
                         </div>
