--- a/gameWish/Core/templates/profile.html
+++ b/gameWish/Core/templates/profile.html
@@ -1,26 +1,41 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h1>Perfil de <span class='text-primary'>{{profile.user.username}}</span> </h1>
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-md-5">
+            {% if profile %}
+                {% if request.user.id == profile.user.id %}
+                    <br/>
+                {% endif %}
+                {% if profile.picture %}
+                    <img src="{{profile.picture.url}}" alt="Imagen de perfil de {{profile.user.username}}" class="img-thumbnail">
+                    <br/><br/>
+                {% endif %}
+                <a href="{% url 'edit_profile' %}" class='btn btn-outline-primary'>Editar Perfil</a>
+            {% else %}
+                <h1>Perfil no encontrado</h1>
+            {% endif %}
+        </div>
 
-{% if profile %}
-    {% if profile.picture %}
-    <img src="{{profile.picture.url}}" alt="Imagen de perfil de {{profile.user.username}}" class="img-thumbnail">
-    <br/><br/>
-    {% endif %}
-    <h1>Perfil de <span class='text-primary'>{{profile.user.username}}</span> </h1>
-    {% if request.user.id == profile.user.id %}
-    <a href="{% url 'edit_profile' %}" class='btn btn-outline-primary'>Editar Perfil</a>
-    <br/>
-    {% endif %}
-    <strong>Tu Wishlist:</strong>
-    <ul>
-        {% for game in profile.wishlist.all %}
-            <li>{{game}}</li>
-        {% endfor %}
-    </ul>
-
-{% else %}
-    <h1>Perfil no encontrado</h1>
-{% endif %}
-
+        {% if profile %}
+            <div class="col-md-7">
+                <h3>Tu <span class='text-primary'>wishlist:<span/></h3>
+                {% for game in data %}
+                    <div class="col-md-4 mb-4">
+                        <div class="card">
+                            <a href="{% url 'game_detail' game.id %}">
+                            <img src="https://images.igdb.com/igdb/image/upload/t_cover_big_2x/{{ game.cover.image_id }}.jpg" class="card-img-top" alt="{{ game.name }}">
+                        </a>
+                            <div class="card-body">
+                                <h5 class="card-title">{{ game.name }}</h5>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
+    </div>
+</div>
 {% endblock %}
