--- a/gameWish/Games/templates/success.html
+++ b/gameWish/Games/templates/success.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %} 
 {% block content %}
 
+{% if user.is_authenticated %}
+
 <div class="container mt-4">
     <h1>Juegos encontrados:</h1>
 
@@ -23,4 +25,8 @@
         <p>No se encontraron juegos.</p>
     {% endif %}
 </div>
+
+{% else %}
+<h1> Debe iniciar sesion para ver informacion de juegos <h1/>
+{% endif %}
 {% endblock %}
