cambio en footer

--- a/gameWish/Core/templates/home.html
+++ b/gameWish/Core/templates/home.html
@@ -44,6 +44,10 @@
             </div>
         </div>
     </div>
+    <div class='pb-5'>
+
+    </div>
+    <br/><br/><br/><br/>
 
     {% include 'footer.html' %}
    
